syntax = "proto3";

package typeracer;

import "scalapb/scalapb.proto";


service TypeRacer {
    rpc SendPlayerMetrics (stream PlayerSpeed) returns (stream Scoreboard) { }
}

message PlayerSpeed {
    string username = 1;
    int32 strokesPerMinute = 2;
}

message Scoreboard {
    option (scalapb.message).companion_extends = "typeracer.scoreboard.ScoreboardCompanion";

    repeated PlayerSpeed topTen = 1;
    repeated PlayerSpeed afkPlayers = 2;
}
